optimize seconds swtich room logic

--- a/Android/scenes/show/src/main/AndroidManifest.xml
+++ b/Android/scenes/show/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
         <activity
             android:name=".LiveDetailActivity"
-            android:launchMode="singleTop"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing" />
 
