--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -3,7 +3,7 @@ apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 
 android {
     defaultConfig {
-        applicationId "io.agora.AgoraVoice"
+        applicationId "io.agora.cantata"
         ndk.abiFilters 'arm64-v8a', 'armeabi-v7a' //, 'x86', 'x86-64'
     }
 
@@ -33,8 +33,8 @@ dependencies {
     if (isProjectLibrary(':scenes:show')) {
         runtimeOnly project(':scenes:show')
     }
-    if (isProjectLibrary(':scenes:grandchorus')) {
-        runtimeOnly project(':scenes:grandchorus')
+    if (isProjectLibrary(':scenes:cantata')) {
+        runtimeOnly project(':scenes:cantata')
     }
 
     //glide 图片加载
