--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -38,10 +38,10 @@ def all_pods
   
   pod 'AgoraSyncManager', '~> 2.1.0'
 
-  pod 'sdk', :path => 'sdk.podspec'
+#  pod 'sdk', :path => 'sdk.podspec'
 #  pod 'sdk', :path => 'sdk.podspec'
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
-# pod 'AgoraRtcEngine_Special_iOS', '4.0.0.133'
+ pod 'AgoraRtcEngine_Special_iOS', '4.1.1.16'
 #  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.147'
 
 
