--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -38,11 +38,11 @@ def all_pods
   
   pod 'AgoraSyncManager', '2.0.8'
 
-#  pod 'sdk', :path => 'sdk.podspec'
-   pod 'AgoraRtcEngine_iOS', :path => './libs'
+ # pod 'sdk', :path => 'sdk.podspec'
+ #  pod 'AgoraRtcEngine_iOS', :path => './libs'
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
 # pod 'AgoraRtcEngine_Special_iOS', '4.0.0.133'
-#  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.142'
+ pod 'AgoraRtcEngine_Special_iOS', '4.1.1.17'
  # pod 'KTVApi', '1.0.0.5'
 
   #ThirdParty
