--- a/Android/scenes/show/build.gradle
+++ b/Android/scenes/show/build.gradle
@@ -1,4 +1,5 @@
 ext { ktv_is_modular = false }
+apply from: 'vendors.gradle'
 apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 
 final def VERSION_SCENE_SHOW = "3.2.0"
