--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
     <application
         android:name="io.agora.scene.base.component.AgoraApplication"
         android:allowBackup="false"
-        android:icon="@mipmap/app_show_ic_launcher"
+        android:icon="@mipmap/app_ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/security_config"
-        android:roundIcon="@mipmap/app_show_ic_launcher"
+        android:roundIcon="@mipmap/app_ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/app_Theme.AgoraKTV"
         tools:replace="android:allowBackup"
