[FEAT] auto download RTM script

--- a/Android/scenes/pure1v1/build.gradle
+++ b/Android/scenes/pure1v1/build.gradle
@@ -68,3 +68,5 @@ dependencies {
     implementation rootProject.ext.deps.gson
     implementation rootProject.ext.deps.syncManager
 }
+
+apply from: 'rtm.gradle'
