--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:icon="@mipmap/app_ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/security_config"
-        android:roundIcon="@mipmap/app_ic_launcher_round"
+        android:roundIcon="@mipmap/app_ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/app_Theme.AgoraKTV"
         tools:replace="android:allowBackup"
