[FEAT] 4.0.0 login page

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             android:configChanges="orientation|keyboardHidden|navigation|screenSize"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.agora.entfulldemo.login.ui.PhoneLoginRegisterActivity"
+            android:name="com.agora.entfulldemo.login.LoginActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name="com.agora.entfulldemo.webview.WebViewActivity"
