--- a/Android/scenes/show/vendors.gradle
+++ b/Android/scenes/show/vendors.gradle
@@ -3,7 +3,7 @@ apply plugin: 'de.undercouch.download'
 task downloadVendorLibs {
     def destFile = new File(buildDir, 'vendors.zip')
     download {
-        src 'https://accktvpic.oss-cn-beijing.aliyuncs.com/pic/release/show/vendor_aars.zip'
+        src 'https://download.agora.io/demo/release/vendor_sensetime_9.3.1.zip'
         dest destFile
         overwrite false
     }
