--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -53,6 +53,9 @@
         <activity
             android:name="com.agora.entfulldemo.home.mine.AboutUsActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="com.agora.entfulldemo.home.mine.MineAccountActivity"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="design_width_in_dp"
