[Feat] add feedback ui logic

--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
 
     implementation rootProject.ext.deps.gson
     implementation rootProject.ext.deps.bugly
+    implementation rootProject.ext.deps.flexbox
+
 }
