--- a/Android/config.gradle
+++ b/Android/config.gradle
@@ -64,6 +64,8 @@ ext {
             svga_player        : 'com.github.yyued:SVGAPlayer-Android:2.6.1',
             agora_chat         : 'io.agora.rtc:chat-sdk:1.1.0',
             ok2curl            : 'com.github.mrmike:ok2curl:0.8.0',
+
+            flexbox            : 'com.google.android.flexbox:flexbox:3.0.0',
     ]
     android = [
             compileSdkVersion: 31,
