--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -52,6 +52,7 @@ def all_pods
   pod 'LSTPopView', '0.3.10'
   pod 'SocketRocket', '0.7.0'
   pod 'Agora-Scene-Utils', '1.1.0'
+#  pod 'Alamofire'
   
   #歌词组件
   pod "ScoreEffectUI", '1.0.2'
