[Android] localization strings

--- a/Android/scenes/voice_spatial/src/main/moduleManifest/AndroidManifest.xml
+++ b/Android/scenes/voice_spatial/src/main/moduleManifest/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:name="io.agora.scene.base.component.AgoraApplication"
         android:allowBackup="false"
         android:icon="@mipmap/voice_ic_launcher_room"
-        android:label="@string/voice_app_name"
+        android:label="@string/voice_spatial_app_name"
         android:networkSecurityConfig="@xml/voice_net_config"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/voice_ic_launcher_room"
