--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -34,11 +34,11 @@ if (!isKTVEmpty) {
     include ':scenes:ktv'
 }
 
-//if (!isVoiceEmpty) {
-//    include ':scenes:voice'
-//    include ':scenes:voice:common'
-//}
-//
+if (!isVoiceEmpty) {
+    include ':scenes:voice'
+    include ':scenes:voice:common'
+}
+
 //if (!isSpatialVoiceEmpty) {
 //    include ':scenes:voice_spatial'
 //    include ':scenes:voice_spatial:common'
