[Fix] add gap between input field and soft keyboard

--- a/Android/scenes/ktv_relay/src/main/AndroidManifest.xml
+++ b/Android/scenes/ktv_relay/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <application>
         <activity
             android:name="io.agora.scene.ktv.singrelay.create.RoomListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/def_material_theme"/>
         <activity
             android:name="io.agora.scene.ktv.singrelay.live.RoomLivingActivity"
             android:launchMode="singleTop"
