--- a/Android/scenes/ktv/src/main/AndroidManifest.xml
+++ b/Android/scenes/ktv/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
 
         <activity
             android:name="io.agora.scene.ktv.create.RoomListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/def_material_theme"/>
         <activity
             android:name="io.agora.scene.ktv.live.RoomLivingActivity"
             android:launchMode="singleTop"
