--- a/Android/scenes/ktv_singbattle/src/main/AndroidManifest.xml
+++ b/Android/scenes/ktv_singbattle/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <application>
         <activity
             android:name=".create.RoomListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/def_material_theme"/>
         <activity
             android:name=".live.RoomLivingActivity"
             android:launchMode="singleTop"
