[Feat] add room list ui  && restful api

--- a/Android/scenes/joy/build.gradle
+++ b/Android/scenes/joy/build.gradle
@@ -30,4 +30,6 @@ dependencies {
 
     implementation rootProject.ext.deps.syncManager
 
+    implementation 'commons-codec:commons-codec:1.16.0'
+
 }
