--- a/Android/scenes/joy/src/main/AndroidManifest.xml
+++ b/Android/scenes/joy/src/main/AndroidManifest.xml
@@ -8,5 +8,17 @@
             android:name="io.agora.scene.joy.ui.RoomListActivity"
             android:screenOrientation="portrait"
             android:theme="@style/joy_def_material_theme"/>
+
+        <activity
+            android:name="io.agora.scene.joy.ui.LivePrepareActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/joy_def_material_theme" />
+
+        <activity
+            android:name="io.agora.scene.joy.ui.RoomLivingActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/joy_def_material_theme" />
     </application>
 </manifest>
