--- a/Android/scenes/joy/src/main/AndroidManifest.xml
+++ b/Android/scenes/joy/src/main/AndroidManifest.xml
@@ -7,18 +7,21 @@
         <activity
             android:name="io.agora.scene.joy.ui.RoomListActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/joy_def_material_theme"/>
+            android:theme="@style/joy_def_material_theme" />
 
         <activity
             android:name="io.agora.scene.joy.ui.LivePrepareActivity"
             android:exported="false"
             android:screenOrientation="portrait"
+            android:keepScreenOn="true"
             android:theme="@style/joy_def_material_theme" />
 
         <activity
             android:name="io.agora.scene.joy.ui.RoomLivingActivity"
             android:exported="false"
+            android:keepScreenOn="true"
             android:screenOrientation="portrait"
-            android:theme="@style/joy_def_material_theme" />
+            android:theme="@style/joy_def_material_theme"
+            android:windowSoftInputMode="adjustNothing" />
     </application>
 </manifest>
