--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -10,8 +10,8 @@ APP_VERSION_CODE=5
 APP_VERSION_NAME=4.0.0
 
 #----------- Server Host Config --------------
-SERVER_HOST=https://gateway-fulldemo.agoralab.co/
-TOOLBOX_SERVER_HOST=https://service.agora.io/toolbox
+SERVER_HOST=https://gateway-fulldemo.shengwang.cn/
+TOOLBOX_SERVER_HOST=https://service.shengwang.cn/toolbox
 
 #----------- Config Agora Keys -----------
 # RTM RTC SDK key Config
