--- a/Android/scenes/showTo1v1/build.gradle
+++ b/Android/scenes/showTo1v1/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation rootProject.ext.deps.core_ktx
     implementation rootProject.ext.deps.constraintlayout
     implementation rootProject.ext.deps.material
+    implementation rootProject.ext.deps.rtm
 
     implementation rootProject.ext.deps.glide
     implementation rootProject.ext.deps.gson
