--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <intent>
             <action android:name="android.media.action.IMAGE_CAPTURE"/>
         </intent>
+
+        <package android:name="com.huawei.multimedia.audioengine" />
     </queries>
 
     <application
