--- a/Android/scenes/ktv_relay/build.gradle
+++ b/Android/scenes/ktv_relay/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     implementation rootProject.ext.deps.fragment_ktx
 
     implementation rootProject.ext.deps.syncManager
-
+    implementation rootProject.ext.deps.audiokit
 }
