--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         android:roundIcon="@mipmap/app_ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/app_Theme.AgoraKTV"
+        android:extractNativeLibs="true"
         tools:replace="android:allowBackup"
         android:requestLegacyExternalStorage="true">
 
