--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -2,10 +2,10 @@ apply from: 'config.gradle'
 buildscript {
     ext.kotlin_version = "1.6.0"
     repositories {
-        maven { url 'https://repo1.maven.org/maven2/' }
-        maven { url 'https://www.jitpack.io' }
         mavenCentral()
         google()
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://www.jitpack.io' }
 
         maven { url 'https://maven.aliyun.com/repository/central' }
         maven { url 'https://maven.aliyun.com/repository/google' }
