--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -1,10 +1,10 @@
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
-        maven { url 'https://repo1.maven.org/maven2/' }
-        maven { url 'https://www.jitpack.io' }
         mavenCentral()
         google()
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://www.jitpack.io' }
 
         maven { url 'https://maven.aliyun.com/repository/central' }
         maven { url 'https://maven.aliyun.com/repository/google' }
