--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -100,7 +100,7 @@ post_install do |installer|
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
       shell_script_path = "Pods/Target Support Files/#{target.name}/#{target.name}-frameworks.sh"
-      if File::exists?(shell_script_path)
+      if File::exist?(shell_script_path)
         shell_script_input_lines = File.readlines(shell_script_path)
         shell_script_output_lines = shell_script_input_lines.map { |line| line.sub("source=\"$(readlink \"${source}\")\"", "source=\"$(readlink -f \"${source}\")\"") }
         File.open(shell_script_path, 'w') do |f|
