--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -42,29 +42,29 @@ include ':scenes:cantata'
 /*
  * 语聊房
  */
-include ':scenes:voice'
-include ':scenes:voice:common'
+//include ':scenes:voice'
+//include ':scenes:voice:common'
 
 /*
  * 空间音频语聊房
  */
-include ':scenes:voice_spatial'
-include ':scenes:voice_spatial:common'
+//include ':scenes:voice_spatial'
+//include ':scenes:voice_spatial:common'
 
 /*
  * 秀场直播
  */
-include ':scenes:show'
-include ':scenes:show:aars:SenseArSourceManager'
-include ':scenes:show:aars:STMobileJNI'
-include ':scenes:show:aars:HardwareBuffer'
+//include ':scenes:show'
+//include ':scenes:show:aars:SenseArSourceManager'
+//include ':scenes:show:aars:STMobileJNI'
+//include ':scenes:show:aars:HardwareBuffer'
 
 /*
  * 1V1私密房
  */
-include ':scenes:pure1v1'
+//include ':scenes:pure1v1'
 
 /**
  * 秀场转1V1私密房
  */
-include ':scenes:showTo1v1'
+//include ':scenes:showTo1v1'
