--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'com.google.protobuf'
 }
 
 if (project.property("AGORA_APP_ID").toString().isEmpty()) {
@@ -50,6 +51,32 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    sourceSets {
+        main {
+            proto {
+                srcDir 'src/main'
+            }
+        }
+    }
+}
+
+protobuf {
+    //配置 protoc 编译器
+    protoc {
+        artifact = 'com.google.protobuf:protoc:3.19.2'
+    }
+    //配置生成目录，编译后会在 build 的目录下生成对应的java文件
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                remove java
+            }
+            task.builtins {
+                java {}
+            }
+        }
+    }
 }
 
 dependencies {
@@ -81,4 +108,7 @@ dependencies {
 
     api rootProject.ext.deps.rtc
     api rootProject.ext.deps.ok2curl
+
+    api rootProject.ext.deps.protobuf_java
+    api rootProject.ext.deps.protobuf_java_util
 }
