[Android]optimize pure 1v1

--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -69,7 +69,7 @@ include ':scenes:show:aars:beauty_bytedance:EffectAAR'
  */
 include ':scenes:pure1v1'
 
-///**
-// * 秀场转1V1私密房
-// */
-//include ':scenes:showTo1v1'
+/**
+ * 秀场转1V1私密房
+ */
+include ':scenes:showTo1v1'
