--- a/Android/scenes/pure1v1/build.gradle
+++ b/Android/scenes/pure1v1/build.gradle
@@ -49,7 +49,8 @@ dependencies {
 
     kapt rootProject.ext.deps.glide_compiler
     implementation rootProject.ext.deps.glide
-
+    implementation rootProject.ext.deps.layout_kernel
+    implementation rootProject.ext.deps.header_classics
     implementation rootProject.ext.deps.annotation
     implementation rootProject.ext.deps.appcompat
     implementation rootProject.ext.deps.lifecycle
@@ -62,4 +63,5 @@ dependencies {
 
     implementation rootProject.ext.deps.gson
     implementation rootProject.ext.deps.syncManager
+
 }
