--- a/Android/config.gradle
+++ b/Android/config.gradle
@@ -48,10 +48,10 @@ ext {
             gson              : 'com.google.code.gson:gson:2.9.0',
             autosize          : 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1',
 
-            rtc               : 'io.agora.rtc:agora-special-full:4.1.1.23',
+            rtc               : 'io.agora.rtc:agora-special-full:4.1.1.24',
             rtm               : 'io.agora:agora-rtm:2.1.8',
             syncManager       : 'com.github.AgoraIO-Community:SyncManager-Android:2.2.9',
-            lyricsView        : 'com.github.AgoraIO-Community:LyricsView:1.1.1',
+            lyricsView        : 'com.github.AgoraIO-Community:LyricsView:1.1.2',
 
             // android native libraries
             core_ktx           : "androidx.core:core-ktx:1.7.0",
@@ -69,7 +69,10 @@ ext {
             picturecompress    : 'io.github.lucksiege:compress:v3.11.1',
 
             // other
-            audiokit           : 'com.huawei.multimedia:audiokit:1.0.1'
+            audiokit           : 'com.huawei.multimedia:audiokit:1.0.1',
+
+            protobuf_java      : 'com.google.protobuf:protobuf-java:3.19.3',
+            protobuf_java_util : 'com.google.protobuf:protobuf-java-util:3.19.3'
     ]
     android = [
             compileSdkVersion: 31,
