remove local pic

--- a/Android/scenes/show/build.gradle
+++ b/Android/scenes/show/build.gradle
@@ -11,8 +11,8 @@ android {
         }
 
         buildConfigField "String", "VERSION", "\"${VERSION_SCENE_SHOW}\""
-        buildConfigField "String", "CLOUD_PLAYER_KEY", "\"${CLOUD_PLAYER_KEY}\""
-        buildConfigField "String", "CLOUD_PLAYER_SECRET", "\"${CLOUD_PLAYER_SECRET}\""
+        buildConfigField "String", "RESTFUL_API_KEY", "\"${RESTFUL_API_KEY}\""
+        buildConfigField "String", "RESTFUL_API_SECRET", "\"${RESTFUL_API_SECRET}\""
     }
 }
 
