--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -36,7 +36,7 @@ def all_pods
   # 商汤美颜
   pod 'SenseLib', :path => 'sense.podspec'
   # 相芯美颜
- # pod 'fuLib', :path => 'fu.podspec'
+  pod 'fuLib', :path => 'fu.podspec'
 
   pod 'AgoraSyncManager', '~> 2.1.6'
 
