--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -26,22 +26,22 @@ include ':common:ui-widget'
 /*
  * 在线K歌房
  */
-include ':scenes:ktv'
+//include ':scenes:ktv'
 
 /*
  * 嗨歌抢唱
  */
-include ':scenes:ktv_singbattle'
+//include ':scenes:ktv_singbattle'
 
 /*
  * 抢麦接唱
  */
-include ':scenes:ktv_relay'
+//include ':scenes:ktv_relay'
 
 /**
  * 大合唱
  */
-include ':scenes:cantata'
+//include ':scenes:cantata'
 
 /*
  * 语聊房
@@ -58,18 +58,18 @@ include ':scenes:voice_spatial:common'
 /*
  * 秀场直播
  */
-include ':scenes:show'
-include ':scenes:show:aars:beauty_sensetime:SenseArSourceManager'
-include ':scenes:show:aars:beauty_sensetime:STMobileJNI'
-include ':scenes:show:aars:beauty_sensetime:HardwareBuffer'
-include ':scenes:show:aars:beauty_bytedance:EffectAAR'
+//include ':scenes:show'
+//include ':scenes:show:aars:beauty_sensetime:SenseArSourceManager'
+//include ':scenes:show:aars:beauty_sensetime:STMobileJNI'
+//include ':scenes:show:aars:beauty_sensetime:HardwareBuffer'
+//include ':scenes:show:aars:beauty_bytedance:EffectAAR'
 
 /*
  * 1V1私密房
  */
-include ':scenes:pure1v1'
+//include ':scenes:pure1v1'
 
 /**
  * 秀场转1V1私密房
  */
-include ':scenes:showTo1v1'
+//include ':scenes:showTo1v1'
