--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -24,42 +24,42 @@ include ':common:ui-widget'
  */
 include ':scenes:ktv'
 
-/*
- * 嗨歌抢唱
- */
-include ':scenes:ktv_singbattle'
-
-/*
- * 抢麦接唱
- */
-include ':scenes:ktv_relay'
-
-/*
- * 语聊房
- */
-include ':scenes:voice'
-include ':scenes:voice:common'
-
-/*
- * 空间音频语聊房
- */
-include ':scenes:voice_spatial'
-include ':scenes:voice_spatial:common'
-
-/*
- * 秀场直播
- */
-include ':scenes:show'
-include ':scenes:show:aars:SenseArSourceManager'
-include ':scenes:show:aars:STMobileJNI'
-include ':scenes:show:aars:HardwareBuffer'
-
-/*
- * 1V1私密房
- */
-include ':scenes:pure1v1'
-
-/**
- * 秀场转1V1私密房
- */
-include ':scenes:showTo1v1'
+///*
+// * 嗨歌抢唱
+// */
+//include ':scenes:ktv_singbattle'
+//
+///*
+// * 抢麦接唱
+// */
+//include ':scenes:ktv_relay'
+//
+///*
+// * 语聊房
+// */
+//include ':scenes:voice'
+//include ':scenes:voice:common'
+//
+///*
+// * 空间音频语聊房
+// */
+//include ':scenes:voice_spatial'
+//include ':scenes:voice_spatial:common'
+//
+///*
+// * 秀场直播
+// */
+//include ':scenes:show'
+//include ':scenes:show:aars:SenseArSourceManager'
+//include ':scenes:show:aars:STMobileJNI'
+//include ':scenes:show:aars:HardwareBuffer'
+//
+///*
+// * 1V1私密房
+// */
+//include ':scenes:pure1v1'
+//
+///**
+// * 秀场转1V1私密房
+// */
+//include ':scenes:showTo1v1'
