--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -67,9 +67,9 @@ include ':scenes:show:aars:beauty_bytedance:EffectAAR'
 /*
  * 1V1私密房
  */
-include ':scenes:pure1v1'
+//include ':scenes:pure1v1'
 
 /**
  * 秀场转1V1私密房
  */
-include ':scenes:showTo1v1'
+//include ':scenes:showTo1v1'
