--- a/Android/scenes/pure1v1/build.gradle
+++ b/Android/scenes/pure1v1/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation project(":common:base")
     implementation project(':common:ui-widget')
+    implementation project(':RTMSyncManager')
 
     kapt rootProject.ext.deps.arouter_kapt
     implementation rootProject.ext.deps.arouter
@@ -62,6 +63,4 @@ dependencies {
     implementation rootProject.ext.deps.rtm
 
     implementation rootProject.ext.deps.gson
-    implementation rootProject.ext.deps.syncManager
-
 }
