[Android]update call api to 2.0.0

--- a/Android/scenes/showTo1v1/build.gradle
+++ b/Android/scenes/showTo1v1/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation project(":common:base")
     implementation project(':common:ui-widget')
+    implementation project(':RTMSyncManager')
 
     kapt rootProject.ext.deps.arouter_kapt
     implementation rootProject.ext.deps.arouter
