--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -82,7 +82,7 @@ def all_pods
   pod 'Agora_Chat_iOS', '1.0.8'
   pod 'SwiftyBeaver', '1.9.5'
   pod 'Protobuf', '3.22.1'
- #  pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
+   pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
 
   #bugly
   pod 'Bugly','2.5.93'
