--- a/Android/scenes/show/build.gradle
+++ b/Android/scenes/show/build.gradle
@@ -2,7 +2,7 @@ ext { ktv_is_modular = false }
 apply from: 'vendors.gradle'
 apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 
-final def VERSION_SCENE_SHOW = "4.2.0"
+final def VERSION_SCENE_SHOW = "4.2.1"
 
 android {
     defaultConfig {
@@ -13,6 +13,7 @@ android {
         buildConfigField "String", "VERSION", "\"${VERSION_SCENE_SHOW}\""
         buildConfigField "String", "RESTFUL_API_KEY", "\"${RESTFUL_API_KEY}\""
         buildConfigField "String", "RESTFUL_API_SECRET", "\"${RESTFUL_API_SECRET}\""
+        buildConfigField "String", "BEAUTY_RESOURCE", "\"${BEAUTY_RESOURCE}\""
     }
 }
 
