--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -12,7 +12,7 @@ APP_VERSION_NAME=4.2.1
 #----------- Server Host Config --------------
 SERVER_HOST=https://gateway-fulldemo.shengwang.cn/
 TOOLBOX_SERVER_HOST=https://service.shengwang.cn/toolbox
-ROOM_MANAGER_SERVER_HOST=https://service-staging.agora.io/room-manager
+ROOM_MANAGER_SERVER_HOST=https://service.shengwang.cn/room-manager
 
 #----------- Resource --------------
 BEAUTY_RESOURCE=
