--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -7,11 +7,14 @@ android.enableJetifier=true
 # application build version code
 APP_VERSION_CODE=5
 # application version name
-APP_VERSION_NAME=4.2.0
+APP_VERSION_NAME=4.10.1
 
 #----------- Server Host Config --------------
 SERVER_HOST=https://gateway-fulldemo.shengwang.cn/
 TOOLBOX_SERVER_HOST=https://service.shengwang.cn/toolbox
+TOOLBOX_SERVER_HOST_DEV=https://service-staging.agora.io/toolbox
+ROOM_MANAGER_SERVER_HOST=
+#ROOM_MANAGER_SERVER_HOST_DEV=
 
 #----------- Config Agora Keys -----------
 # RTM RTC SDK key Config
