--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -73,6 +73,10 @@
         <activity
             android:name="com.agora.entfulldemo.home.mine.FeedbackActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="com.agora.entfulldemo.home.mine.AppDebugActivity"
+            android:screenOrientation="portrait" />
+
 
         <meta-data
             android:name="design_width_in_dp"
