--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -53,7 +53,7 @@ android {
 }
 
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     implementation rootProject.ext.deps.appcompat
     api rootProject.ext.deps.multidex
     implementation rootProject.ext.deps.annotation
@@ -79,6 +79,6 @@ dependencies {
     implementation rootProject.ext.deps.coroutines_android
 
 
-    api rootProject.ext.deps.rtc
+//    api rootProject.ext.deps.rtc
     api rootProject.ext.deps.ok2curl
 }
