--- a/Android/scenes/show/build.gradle
+++ b/Android/scenes/show/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation project(path: ":scenes:show:aars:beauty_sensetime:STMobileJNI")
     implementation project(path: ":scenes:show:aars:beauty_sensetime:HardwareBuffer")
     implementation project(path: ":scenes:show:aars:beauty_bytedance:EffectAAR")
+    implementation project(path: ":scenes:show:aars:metakit")
     implementation 'com.faceunity:core:8.7.0'
     implementation 'com.faceunity:model:8.7.0'
 
