--- a/Android/scenes/show/build.gradle
+++ b/Android/scenes/show/build.gradle
@@ -24,7 +24,9 @@ dependencies {
     implementation project(path: ":scenes:show:aars:beauty_sensetime:HardwareBuffer")
     implementation project(path: ":scenes:show:aars:beauty_bytedance:EffectAAR")
     implementation 'com.faceunity:core:8.7.0'
-    implementation 'com.faceunity:model:8.7.0'
+    if (BEAUTY_RESOURCE == "") {
+        implementation 'com.faceunity:model:8.7.0'
+    }
 
     implementation project(":common:base")
     implementation project(':common:ui-widget')
