【Feat】change metakit aar dirc (#927)
* 【Feat】change metakit aar dirc

* 【Feat】add metakit placeholder

* 【Feat】update show version code

* 【Feat】check download metakit

* 【Feat】update  bytedance licenese

* 【Fix】stop effect 3d

* 【Feat】update ai photographer dialog

* 【Fix】bytedance beauty

* 【Feat】fix switch virtualbackground/aiphotogher

--- a/Android/scenes/show/build.gradle
+++ b/Android/scenes/show/build.gradle
@@ -2,7 +2,7 @@ ext { ktv_is_modular = false }
 apply from: 'vendors.gradle'
 apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 
-final def VERSION_SCENE_SHOW = "4.2.0"
+final def VERSION_SCENE_SHOW = "4.2.100"
 
 android {
     defaultConfig {
@@ -25,6 +25,7 @@ dependencies {
     implementation project(path: ":scenes:show:aars:beauty_sensetime:STMobileJNI")
     implementation project(path: ":scenes:show:aars:beauty_sensetime:HardwareBuffer")
     implementation project(path: ":scenes:show:aars:beauty_bytedance:EffectAAR")
+    implementation project(path: ":scenes:show:aars:metakit")
     implementation 'com.faceunity:core:8.7.0'
     implementation 'com.faceunity:model:8.7.0'
 
