--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -43,7 +43,7 @@ def all_pods
 #  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
   pod 'AgoraRtcEngine_Special_iOS', '4.1.1.29'
-  pod 'AgoraRtm_iOS', '2.1.10'
+  pod 'AgoraRtm', '2.2.0'
 
   pod 'AudioScenarioApi', :path => 'AgoraEntScenarios/Common/API/AudioScenarioApi'
   pod 'RTMSyncManager', :path => 'AgoraEntScenarios/Common/API/RTMSyncManager'
@@ -88,7 +88,7 @@ def all_pods
   #bugly
   pod 'Bugly','2.5.93'
   
-  pod 'HXPhotoPicker/Lite'
+  pod 'HXPhotoPicker/Lite', '4.1.7'
   
   
   #need to remove
