--- a/Android/RTMSyncManager/build.gradle
+++ b/Android/RTMSyncManager/build.gradle
@@ -31,15 +31,16 @@ android {
 }
 
 dependencies {
+    implementation rootProject.ext.deps.gson
+    implementation rootProject.ext.deps.annotation
+    implementation rootProject.ext.deps.retrofit2
+    implementation rootProject.ext.deps.logger
+    implementation rootProject.ext.deps.ok2curl
+    implementation rootProject.ext.deps.okhttp
+    implementation rootProject.ext.deps.okhttp_logger
+    implementation rootProject.ext.deps.retrofit2
+    implementation rootProject.ext.deps.retrofit2_cov
 
-    implementation 'com.google.code.gson:gson:2.9.0'
-    implementation 'androidx.annotation:annotation:1.5.0'
-    api "com.squareup.retrofit2:retrofit:2.6.3"
-    implementation "com.squareup.retrofit2:converter-gson:2.6.3"
-    implementation 'com.orhanobut:logger:2.2.0'
-    implementation 'com.github.mrmike:ok2curl:0.8.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
-
-    implementation 'io.agora:agora-rtm:2.1.8'
+    implementation rootProject.ext.deps.rtm
+    implementation rootProject.ext.deps.rtc
 }
