--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -14,17 +14,12 @@ def all_pods
   # 布局
   pod 'Masonry', '1.1.0'
   # tips
-#  pod 'MBProgressHUD', '~> 1.1.0'
   pod 'SVProgressHUD', '2.2.5'
   # 加载图片
-  pod 'SDWebImage', '4.4.8'
-  pod 'SDWebImageAPNGCoder'
+  pod 'SDWebImage', '5.0.6'
   # Model
   pod 'YYModel', '1.0.4'
-#  pod 'YYCache', '1.0.4'
   pod 'YYCategories', '1.0.4'
-  # 键盘
-#  pod 'IQKeyboardManager', '6.5.10'
 
   #弹框
   pod 'LEEAlert', '1.6.4'
@@ -42,8 +37,8 @@ def all_pods
 
 #  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
-  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.27'
-  pod 'AgoraRtm_iOS', '2.1.10'
+  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.29'
+  pod 'AgoraRtm', '2.2.0'
 
   pod 'AudioScenarioApi', :path => 'AgoraEntScenarios/Common/API/AudioScenarioApi'
   pod 'RTMSyncManager', :path => 'AgoraEntScenarios/Common/API/RTMSyncManager'
@@ -88,7 +83,7 @@ def all_pods
   #bugly
   pod 'Bugly','2.5.93'
   
-  pod 'HXPhotoPicker/Lite'
+  pod 'HXPhotoPicker/Lite', '4.1.7'
   
   
   #need to remove
