--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -32,9 +32,9 @@ def all_pods
   pod 'JXCategoryView', '1.6.1'
 
   # 火山美颜
-  pod 'bytedEffect', :path => 'bytedEffect.podspec'
+  #pod 'bytedEffect', :path => 'bytedEffect.podspec'
   # 商汤美颜
-  pod 'SenseLib', :path => 'sense.podspec'
+  #pod 'SenseLib', :path => 'sense.podspec'
   # 相芯美颜
  # pod 'fuLib', :path => 'fu.podspec'
 
@@ -48,7 +48,7 @@ def all_pods
   pod 'VideoLoaderAPI', :path => 'AgoraEntScenarios/Common/API/VideoLoaderAPI'
   pod 'Pure1v1', :path => 'AgoraEntScenarios/Scenes/Pure1v1'
   pod 'ShowTo1v1', :path => 'AgoraEntScenarios/Scenes/ShowTo1v1'
-  pod 'Cantata', :path => 'AgoraEntScenarios/Scenes/Cantata'
+#  pod 'Cantata', :path => 'AgoraEntScenarios/Scenes/Cantata'
   pod 'AgoraCommon', :path => 'AgoraEntScenarios'
   #ThirdParty
 #  pod 'HWWeakTimer', '1.0'
