--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -23,48 +23,49 @@ include ':app'
 include ':common:base'
 include ':common:ui-widget'
 
-/*
- * 在线K歌房
- */
-include ':scenes:ktv'
-
-/*
- * 嗨歌抢唱
- */
-include ':scenes:ktv_singbattle'
-
-/*
- * 抢麦接唱
- */
-include ':scenes:ktv_relay'
-
-/**
- * 大合唱
- */
-include ':scenes:cantata'
-
-/*
- * 语聊房
- */
-include ':scenes:voice'
-include ':scenes:voice:common'
-
-/*
- * 空间音频语聊房
- */
-include ':scenes:voice_spatial'
-include ':scenes:voice_spatial:common'
-
-/*
- * 秀场直播
- */
-include ':scenes:show'
-include ':scenes:show:aars:beauty_sensetime:SenseArSourceManager'
-include ':scenes:show:aars:beauty_sensetime:STMobileJNI'
-include ':scenes:show:aars:beauty_sensetime:HardwareBuffer'
-include ':scenes:show:aars:beauty_bytedance:EffectAAR'
+///*
+// * 在线K歌房
+// */
+//include ':scenes:ktv'
+//
+///*
+// * 嗨歌抢唱
+// */
+//include ':scenes:ktv_singbattle'
+//
+///*
+// * 抢麦接唱
+// */
+//include ':scenes:ktv_relay'
+//
+///**
+// * 大合唱
+// */
+//include ':scenes:cantata'
+//
+///*
+// * 语聊房
+// */
+//include ':scenes:voice'
+//include ':scenes:voice:common'
+//
+///*
+// * 空间音频语聊房
+// */
+//include ':scenes:voice_spatial'
+//include ':scenes:voice_spatial:common'
+//
+///*
+// * 秀场直播
+// */
+//include ':scenes:show'
+//include ':scenes:show:aars:beauty_sensetime:SenseArSourceManager'
+//include ':scenes:show:aars:beauty_sensetime:STMobileJNI'
+//include ':scenes:show:aars:beauty_sensetime:HardwareBuffer'
+//include ':scenes:show:aars:beauty_bytedance:EffectAAR'
 
 include ':RTMSyncManager'
+
 /*
  * 1V1私密房
  */
