--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -9,6 +9,7 @@ android {
 
     packagingOptions {
         pickFirst 'lib/*/libc++_shared.so'
+        pickFirst 'lib/*/libaosl.so'
     }
 
     lint {
