[Android][Show]1.update protocol impl using RTM SyncManager;2.adapt to 4.3.1 sdk

--- a/Android/scenes/show/build.gradle
+++ b/Android/scenes/show/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
     implementation project(":common:base")
     implementation project(':common:ui-widget')
+    implementation project(':RTMSyncManager')
 
     implementation rootProject.ext.deps.appcompat
     implementation rootProject.ext.deps.annotation
@@ -48,5 +49,6 @@ dependencies {
     implementation rootProject.ext.deps.fragment_ktx
 
     implementation rootProject.ext.deps.syncManager
+    // implementation rootProject.ext.deps.rtm
 
 }
