--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -31,29 +31,29 @@ include ':scenes:ktv'
 /*
  * 嗨歌抢唱
  */
-include ':scenes:ktv_singbattle'
+//include ':scenes:ktv_singbattle'
 
 /*
  * 抢麦接唱
  */
-include ':scenes:ktv_relay'
+//include ':scenes:ktv_relay'
 
 /**
  * 大合唱
  */
-include ':scenes:cantata'
+//include ':scenes:cantata'
 
 /*
  * 语聊房
  */
-include ':scenes:voice'
-include ':scenes:voice:common'
+//include ':scenes:voice'
+//include ':scenes:voice:common'
 
 /*
  * 空间音频语聊房
  */
-include ':scenes:voice_spatial'
-include ':scenes:voice_spatial:common'
+//include ':scenes:voice_spatial'
+//include ':scenes:voice_spatial:common'
 //
 ///*
 // * 秀场直播
@@ -69,14 +69,14 @@ include ':RTMSyncManager'
 /*
  * 1V1私密房
  */
-include ':scenes:pure1v1'
+//include ':scenes:pure1v1'
 
 /**
  * 秀场转1V1私密房
  */
-include ':scenes:showTo1v1'
+//include ':scenes:showTo1v1'
 
 /**
  * 弹幕游戏
  */
-include ':scenes:joy'
+//include ':scenes:joy'
