--- a/Android/scenes/show/build.gradle
+++ b/Android/scenes/show/build.gradle
@@ -49,6 +49,6 @@ dependencies {
     implementation rootProject.ext.deps.fragment_ktx
 
     implementation rootProject.ext.deps.syncManager
-    // implementation rootProject.ext.deps.rtm
+    implementation rootProject.ext.deps.rtm
 
 }
