--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -10,6 +10,18 @@ android {
     packagingOptions {
         pickFirst 'lib/*/libc++_shared.so'
         pickFirst 'lib/*/libaosl.so'
+        exclude 'lib/*/libagora_lip_sync_extension.so'
+        exclude 'lib/*/libagora_screen_capture_extension.so'
+        exclude 'lib/*/libagora_face_capture_extension.so'
+        exclude 'lib/*/libagora_face_detection_extension.so'
+        exclude 'lib/*/libagora_video_av1_decoder_extension.so'
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled true
+            shrinkResources true
+        }
     }
 
     lint {
